infrastructure/policy-reporter/policy-reporter.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: baseline
    #istio.io/dataplane-mode: ambient
  name: policy-reporter
