infrastructure/policy-reporter/policy-reporter-gateway.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: policy-reporter-auth
  namespace: policy-reporter
spec:
  basicAuth:
    secret: policy-reporter-auth
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: policy-reporter-ui-http
  namespace: policy-reporter
spec:
  parentRefs:
  - name: infra-gateway
    sectionName: web
    namespace: traefik
  hostnames:
  - policy-reporter.pipenberg.eu
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: policy-reporter-ui-https
  namespace: policy-reporter
spec:
  parentRefs:
  - name: infra-gateway
    sectionName: websecure
    namespace: traefik
  hostnames:
  - policy-reporter.pipenberg.eu
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: policy-reporter-ui
      namespace: policy-reporter
      port: 8080
