infrastructure/policy-reporter/policy-reporter-ui-networpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy-reporter-ui
  namespace: policy-reporter
spec:
  egress:
  - ports:
    - port: 8080
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/instance: policy-reporter
          app.kubernetes.io/name: policy-reporter
  - {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: traefik
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: policy-reporter
      app.kubernetes.io/name: policy-reporter-ui
  policyTypes:
  - Ingress
  - Egress
